# emoji2image

./: CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  main.cpp  readme.md
libs/: CMakeLists.txt
libs/emojicpp/: CMakeLists.txt
libs/emojicpp/include/emojicpp/: .gitignore  emoji.h
src/: main.cpp
